test/fail_compilation/fail36.d
template t(int L)
{
int a;
// void foo(int b = t!(L).a) {} // correct
void foo(int b = t.a) {} // wrong
}

void func()
{
mixin t!(10);
}

